Make the classess for GeoServer plugin and its dependencies build for Java 11
Make sure the GeoServer plugin and its dependencies are built for Java 11.

Run the plugin build tests in Github Actions with a java version matrix [11, 17, 21]