@@ -27,6 +27,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class RuleAdminServiceIT {
@@ -255,7 +256,7 @@ public class RuleAdminServiceIT {
         ruleAdminService.setLayerDetails(r2.getId(), details2);
 
         List<Rule> expected = List.of(r1, r2);
-        List<Rule> actual = ruleAdminService.getAll().toList();
+        List<Rule> actual = ruleAdminService.getAll().collect(Collectors.toList());
         assertThat(actual).isEqualTo(expected);
     }
 
@@ -278,7 +279,7 @@ public class RuleAdminServiceIT {
         String nextCursorId = null;
         for (int page = 0; page < maxPages; page++) {
             query.setNextId(nextCursorId);
-            List<Rule> result = ruleAdminService.getAll(query).toList();
+            List<Rule> result = ruleAdminService.getAll(query).collect(Collectors.toList());
             if (result.size() > pageSize) {
                 assertThat(result.size()).isEqualTo(1 + pageSize);
                 nextCursorId = result.get(pageSize).getId();
@@ -608,7 +609,7 @@ public class RuleAdminServiceIT {
         r1 = r1.withPriority(4);
         r4 = r4.withPriority(5);
         assertThat(ruleAdminService.update(r3)).isEqualTo(r3);
-        List<Rule> collect = ruleAdminService.getAll().toList();
+        List<Rule> collect = ruleAdminService.getAll().collect(Collectors.toList());
 
         assertGet(r2).as("r2 should have kept priority 2").isEqualTo(r2);
 
@@ -689,11 +690,9 @@ public class RuleAdminServiceIT {
     }
 
     private void assertPriorities(List<Rule> expectedOrder, List<Integer> expectedPriorities) {
-        assertThat(expectedOrder.size())
-                .as("mismatch in expectations")
-                .isEqualTo(expectedPriorities.size());
-        List<Rule> all = ruleAdminService.getAll().toList();
-        assertThat(all.size()).isEqualTo(expectedPriorities.size());
+        assertThat(expectedOrder).as("mismatch in expectations").hasSize(expectedPriorities.size());
+        List<Rule> all = ruleAdminService.getAll().collect(Collectors.toList());
+        assertThat(all).hasSize(expectedPriorities.size());
 
         for (int i = 0; i < expectedOrder.size(); i++) {
             int p = expectedPriorities.get(i);
