@@ -21,6 +21,7 @@ import org.geoserver.web.wicket.ImageAjaxLink;
 import org.junit.Test;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @SuppressWarnings("unused")
@@ -30,7 +31,7 @@ public class RulesTablePanelTest extends AclWicketTestSupport {
         AdminRuleAdminService adminService = adminService();
         assertEquals(0, adminService.count());
         IntStream.rangeClosed(1, count).mapToObj(this::testRule).forEach(adminService::insert);
-        return adminService.getAll().toList();
+        return adminService.getAll().collect(Collectors.toList());
     }
 
     private AdminRule testRule(int i) {
@@ -85,7 +86,8 @@ public class RulesTablePanelTest extends AclWicketTestSupport {
     @Test
     public void testUpDown() {
         List<AdminRule> rules = createTestRules(3);
-        List<MutableAdminRule> mutableRules = rules.stream().map(MutableAdminRule::new).toList();
+        List<MutableAdminRule> mutableRules =
+                rules.stream().map(MutableAdminRule::new).collect(Collectors.toList());
 
         AdminRulesTableDataProvider data = spy(new AdminRulesTableDataProvider());
 
